# LC-PDFimporter

./: .gitignore  0build_master_output_1LC-PDFimporter.py  COMPATIBILITY.md  INSTALL.md  LICENSE  README.md  build_release.py  dxf_builder.py  dxf_import_engine.py  dxf_text_builder.py  gui.py  launch_lcpdf_gui.pyw  pdf2dxf.py  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  lc-pdfimporter-ci.yml  librecad-pdfimporter-ci.yml  release.yml
benchmarks/: feature_compare_lc_1071.json  feature_compare_lc_1071_raster.json  production_benchmark_2026-04-03.json  production_benchmark_2026-04-03.md  qa_smoke_1071.json  qa_smoke_corpus_2026-04-07.json  qa_smoke_new_folder2_2026-04-07_postfix.json  qa_smoke_newfolder2_2026-04-07.json  quick_test.json  quick_test_module.json  regression_sweep_20260404_lc.json
benchmarks/accuracy_audit_20260404_031243/: accuracy_audit.json  accuracy_audit.md
benchmarks/dash_audit_20260404_024728/: dash_accuracy_audit.json  dash_accuracy_audit.md
benchmarks/dash_audit_20260404_024847/: dash_accuracy_audit.json  dash_accuracy_audit.md
librecad_pdf_importer/: __init__.py  batch_cli.py  cli.py  importer.py  qa_smoke.py
librecad_pdf_importer/core/: PDFDocumentProfiler.py  PDFImportConfig.py  PDFPrimitiveExtractor.py  PDFPrimitives.py  (+3 more)
pdfcadcore/: __init__.py  auto_mode.py  document_profiler.py  hatch_detector.py  import_config.py  primitive_extractor.py  primitives.py  recognition.py
plugin/: README.md  build_install_lcpdf_menu.ps1  common_qmake.pri
tests/: test_clean_break.py  test_dxf_pipeline.py  test_mode_cli.py
(+8 files in other folders)
