[project]
name = "pdf2dxf"
version = "1.0.0"
description = "PDF to DXF converter for LibreCAD, AutoCAD, DraftSight, QCAD"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24",
    "ezdxf>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["F", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
